<resources>
    <string name="app_name">ET-LITS</string>
    <string name="add_animal">Add Animal</string>
    <string name="button_save">Save</string>
    <string name="select_date">Select Date...</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Enter an email</string>
    <string name="invalid_password">Enter a password</string>
    <string name="login_alert_title">Sign in error</string>
    <string name="login_unauthorized">The email or password is incorrect.</string>
    <string name="login_server_unreachable">Server is unreachable.</string>
    <string name="login_generic_error">Login failed.</string>
    <string name="sign_out_confirmation_prompt">Do you want to sign out?</string>
    <string name="no_internet_connection">No internet connection. Please connect to wi-fi or mobile data.</string>
    <string name="no_internet_connection_short">No internet</string>
    <string name="sync_init_dialog_title">Data Initialization</string>
    <string name="sync_init_dialog_msg">To get started, the app needs to download the necessary data.</string>
    <string name="sync_init_dialog_msg_resume">Data initialization has not finished. The app needs to complete data download.</string>
    <string name="sync_start_data_download">START DATA DOWNLOAD</string>
    <string name="sync_resume_data_download">RESUME DATA DOWNLOAD</string>
    <string name="sync_view_last_attempt">VIEW LAST ATTEMPT</string>
    <string name="sync_exit_app">EXIT APP</string>
    <string name="title_data_sync">Data Sync</string>
    <string name="btn_sync_start">START</string>
    <string name="btn_sync_stop">STOP</string>
    <string name="sync_date">%1$s</string>
    <string name="sync_stopped_msg">%1$s</string>
    <string name="synced_by">Synced by: %1$s</string>
    <string name="sync_init_dialog_exit_no">NO</string>
    <string name="sync_init_dialog_exit_yes">YES, STOP &amp; EXIT THE APP</string>
    <string name="sync_init_dialog_exit_msg">Initial data download is in progress. Do you want to stop and exit the app?</string>
    <string name="sync_info_text">During data synchronization, the mobile app downloads from the ET-LITS web application the data to be stored locally for repeated and offline use. Changes done on the mobile app are sent back to the ET-LITS web application for final validation and permanent storage. Until then, locally stored data is not officially recognized. Some data can be changed via the ET-LITS website. If this data is not refreshed on your device, then your changes that rely on it may be rejected during data sync. Locally stored changes may also get lost due to device damage or unexpected data storage issues. Data synchronization must be done as often as possible, immediately the internet connection is available.</string>
    <string name="sync_records">records</string>
    <string name="sync_history_icon_txt">History</string>
    <string name="sync_view_details">View Details</string>
    <string name="sync_update_details">Update Details</string>
    <string name="sync_records_sent">Records sent: %1$s</string>
    <string name="sync_records_not_sent">Records not sent: %1$s</string>
    <string name="sync_records_received">Records received: %1$s</string>
    <string name="sync_errors">Errors</string>
    <string name="sync_error_server_unreachable">ET-LITS server cannot be reached.</string>
    <string name="sync_error_401">Authentication error occured.</string>
    <string name="sync_error_generic">Sync failed. Unknown sync error.</string>
    <string name="sync_database_error">Sync failed. A database error occurred while saving data.</string>
    <string name="sync_status_not_started">Not Started</string>
    <string name="sync_status_initializing">Initializing</string>
    <string name="sync_status_in_progress">In Progress</string>
    <string name="sync_status_completed">Success</string>
    <string name="sync_status_stopping">Stopping</string>
    <string name="sync_status_stopped">Stopped</string>
    <string name="sync_status_partial">Partial</string>
    <string name="sync_status_failed">Failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_home">Home</string>
    <string name="menu_animals">Animal</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Sign out</string>
    <string name="menu_move">Move</string>
    <string name="sync_stopped_by_user">Stopped by user</string>
    <string name="sync_status">Sync Status</string>
    <string name="sync_data_may_be_stale">Data may be stale</string>
    <string name="sync_info_close">Close</string>
    <string name="home_establishment_search">Establishment Search</string>
    <string name="establishment_title">Establishment</string>
    <string name="establishment_summary_eid">EID</string>
    <string name="establishment_type">Type</string>
    <string name="establishment_phone">Phone</string>
    <string name="establishment_not_specified">not specified</string>
    <string name="establishment_mobile">Mobile</string>
    <string name="establishment_alternative_postal_address">Alternative Postal Address</string>
    <string name="establishment_physical_address">Physical Address</string>
    <string name="establishment_latitude_longitude">Latitude/Longitude</string>
    <string name="establishment_name">Name</string>
    <string name="establishment_email">Email</string>
    <string name="establishment_use_by_default">Use By Default</string>
    <string name="selected_establishment">Selected Establishment</string>
    <string name="establishment_set_default_msg">Default establishment has been set to: %1$s</string>
    <string name="establishment_search_hint">EID Lookup</string>
    <string name="home_stakeholders">Stakeholders</string>
    <string name="home_documents">Documents</string>
    <string name="animal_trace">Trace</string>
    <string name="animals_trace">Trace</string>
    <string name="animals_remove">Remove</string>
    <string name="animals_health">Health</string>
    <string name="animals_register_tag">Register/Tag</string>
    <string name="animal_reg_on_holding_ground">On Holding Ground</string>
    <string name="animal_reg_establishment_eid">Establishment EID*</string>
    <string name="animal_reg_lookup_eid">Lookup EID</string>
    <string name="animal_reg_date_move_off">Date Move-Off*</string>
    <string name="animal_reg_select_date">Select Date ...</string>
    <string name="animal_reg_establishment">Establishment</string>
    <string name="animal_reg_date_move_on">Date Move-On*</string>
    <string name="animal_reg_date_identification">Date Identification*</string>
    <string name="animal_reg_animals_identified_and_registered">Animals identified and registered</string>
    <string name="animal_reg_herd_specie">Herd Specie*</string>
    <string name="animal_reg_add_animal">Add Animal</string>
    <string name="reg_enter_animal_id">Animal ID</string>
    <string name="animal_reg_animal_id">Animal ID*</string>
    <string name="animal_reg_add_next_animal">Add Next Animal</string>
    <string name="animal_reg_done">Done</string>
    <string name="animal_reg_breed">Breed*</string>
    <string name="animal_reg_select">Select...</string>
    <string name="animal_reg_sex">Sex*</string>
    <string name="animal_reg_age">Age (Months)*</string>
    <string name="animal_reg_age_hint">Age in months...</string>
    <string name="animal_reg_dead">Dead</string>
    <string name="animal_reg_seller">Seller</string>
    <string name="animal_reg_seller_hint">Seller</string>
    <string name="animal_reg_field_required">Required</string>
    <string name="animal_reg_animal_id_required">Animal Id field is required</string>
    <string name="animal_reg_sex_required">Sex field is required</string>
    <string name="animal_reg_breed_required">Breed field is required</string>
    <string name="animal_reg_age_required">Age field is required</string>
    <string name="animal_reg_animal_id_invalid">Invalid animal Id. Allowed format is: ET 0000000001</string>
    <string name="animal_reg_age_invalid">Invalid Age. Allowed range is 1 to 300 months.</string>
    <string name="animal_reg_age_months">%1$s months</string>
    <string name="animal_reg_animal_detail_title">Animal Details</string>
    <string name="animal_reg_title">Animal Registrations</string>
    <string name="animal_reg_date_required">Date required</string>
    <string name="animal_reg_eid_required">Establishment ID required</string>
    <string name="animal_reg_date_in_future">Selected date should not be in future.</string>
    <string name="animal_reg_identification_date_after_move_off">Date Move-Off must be after or same as Date Identification</string>
    <string name="animal_reg_move_off_date_after_move_on">Date Move-On must be on or after Date Move-Off.</string>
    <string name="animal_reg_treatments_applied">Treatments Applied</string>
    <string name="animal_reg_finish_registration">Finish Registration</string>
    <string name="animal_reg_view_registrations">View Registrations</string>
    <string name="animal_reg_no_animals_registered">No Animals Registered</string>
    <string name="animal_reg_animal_list_empty_error">At least one animal must be registered.</string>
    <string name="animal_reg_dialog_ok">OK</string>
    <string name="card_animals">Animals</string>
    <string name="animal_reg_animal_list_info">"Please tap on ‘Add Animal' to enter a new animal in the list or edit icon to change the animal details.\nTap on the 'Next' button or swipe left to continue your activities. "</string>
    <string name="animal_reg_move_events_info">You are in process to register animals on the holding ground.\nFor each animal an Move-Off from holding ground and a Move-On to establishment will be created.\nPlease enter the EID of the holding ground and the dates of tagging and movements.\nEID = Establishment ID\nFields marked with * are mandatory\nTap on the \'Next\' button or swipe left to continue your activities.</string>
    <string name="animal_reg_treatments_info">If the animals were treated with treatments at arrival on the establishment you can indicate the kind of treatment by tapping the respective checkbox.\nPlease note that the treatments indicated will be registered for each animal in the list of animals.\nTap on the \'Finish Registration\' button to complete the animals’ registration.</string>
    <string name="animal_reg_animal_detail_info">Tap on the \'Dead\' animal toggle if the animal was found dead during transport.\nTap on the \'Done\' button to complete current animal data entry and return to the animal registration form.\nTap on the \'Add Next Animal\' to complete the current animal data entry and open new Animal Details to continue registering the next animal.</string>
    <string name="animal_reg_leave_the_form">Leave the form?</string>
    <string name="animal_reg_leave_form_msg">Any changes entered will be lost. Are you sure you want to leave?</string>
    <string name="animal_reg_leave_form_yes">Yes</string>
    <string name="animal_reg_leave_form_cancel">Cancel</string>
    <string name="animal_reg_close_snackbar_msg">%1$s animals registered</string>
    <string name="animal_reg_close_snackbar_action">SYNC</string>
    <string name="home_animal_search">Animal Search</string>
    <string name="animal_id_lookup_hint">Animal ID Lookup</string>
</resources>