<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.AnimalDataEntryActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="@dimen/big_margin"
        android:layout_weight="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home"
            android:layout_margin="@dimen/big_padding"
            android:layout_gravity="center"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_animal_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/animal_reg_animal_id" />

            <EditText
                android:id="@+id/et_animal_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_animal_id"
                android:hint="@string/reg_enter_animal_id"
                android:minHeight="@dimen/min_touch_target_size"
                />

        </RelativeLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_animal_filled"
                android:layout_margin="@dimen/big_padding"
                android:layout_gravity="center"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_breed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_reg_breed" />
                <Spinner
                    android:id="@+id/s_breed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_breed"
                    android:hint="@string/animal_reg_select"
                    android:minHeight="@dimen/min_touch_target_size"
                    />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sex"
                android:layout_margin="@dimen/big_padding"
                android:layout_gravity="center"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_reg_sex" />

                <Spinner
                    android:id="@+id/s_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sex"
                    android:hint="@string/animal_reg_select"
                    android:minHeight="@dimen/min_touch_target_size" />
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hourglass"
                android:layout_margin="@dimen/big_padding"
                android:layout_gravity="center"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_reg_age" />

                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_age"
                    android:hint="@string/animal_reg_age_hint"
                    android:minHeight="@dimen/min_touch_target_size"
                    />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_square"
                android:layout_margin="@dimen/big_padding"
                android:layout_gravity="center"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_dead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_reg_dead" />
                <Switch
                    android:id="@+id/sw_dead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_dead"
                    android:minHeight="@dimen/min_touch_target_size"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person"
                android:layout_margin="@dimen/big_padding"
                android:layout_gravity="center"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_seller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_reg_seller"/>

                <EditText
                    android:id="@+id/et_seller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_seller"
                    android:hint="@string/animal_reg_seller_hint"
                    android:minHeight="@dimen/min_touch_target_size"
                    />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_bottom_sheet">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bg_white_round_corners"
            android:layout_margin="@dimen/big_padding">
            <LinearLayout
                android:id="@+id/bottom_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_reg_done"
                    android:id="@+id/btn_done"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/small_margin"
                    android:background="@drawable/bg_white_round_corners"
                    android:textColor="@color/colorPrimary"
                    android:padding="@dimen/small_padding"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:drawableLeft="@drawable/ic_tick_square"
                    android:drawablePadding="@dimen/small_padding"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_reg_add_next_animal"
                    android:id="@+id/btn_add_next_animal"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/small_margin"
                    android:background="@drawable/bg_white_round_corners"
                    android:textColor="@color/colorPrimary"
                    android:padding="@dimen/small_padding"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:drawableLeft="@drawable/ic_plus"
                    android:drawablePadding="@dimen/small_padding"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>